--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li>Alvana Model Secondary School</li>
         <li>Living World Academy</li>
         <li>Hillcrest High</li>
-        <li>University Of Abuja</li>
+        <li>University Of Abuja(BSC in computer science)</li>
     </ul>
     <hr>
     <h3>My Work Experience</h3>
@@ -34,11 +34,11 @@
         <tbody>
          <tr>
             <td>2019-2020</td>
-            <td>Ict Intern</td>
+            <td>Ict Intern @nnpc towers</td>
          </tr>
          <tr>
              <td>2022-2023</td>
-             <td>Ict Intern</td>
+             <td>Ict Intern @julius Berger</td>
          </tr>
         </tbody>
     </table>
