--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
     <table cellspacing="11">
         <tr>
             <td>HTML</td>
-            <td>🌟🌟🌟🌟🌟</td>
         </tr>
         <tr>
             <td>CSS</td>
-            <td>🌟🌟🌟🌟</td>
+        </tr>
+        <tr>
+            <td>BOOTSTRAP</td>
         </tr>
     </table>
     <hr>
